apps/monitoring/alertmanager/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "alertmanager"
spec:
  ports:
    - port: 80
      protocol: "TCP"
      targetPort: "alertmanager"
      name: "alertmanager"
    - port: 9094
      protocol: "TCP"
      targetPort: "am-cluster"
      name: "am-cluster"
  selector:
    app.kubernetes.io/name: "alertmanager"
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "alertmanager-cluster-udp"
spec:
  ports:
    - port: 9094
      protocol: "UDP"
      targetPort: "am-cluster"
      name: "am-cluster"
  selector:
    app.kubernetes.io/name: "alertmanager"
