apps/monitoring/alertmanager/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alertmanager
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 9093
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: "karma"
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: "prometheus"
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: "vmalert"
    - ports:
        - protocol: TCP
          port: 9094
